--- a/estilo00.css
+++ b/estilo00.css
@@ -81,7 +81,11 @@ header #menu_central ul li a:hover{
     height: 99vh;
     background-color: #12e08b;
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(92, 77, 66, 0.8)), to(rgba(92, 77, 66, 0.226))), url("../assets/img/barbeariaFundo.jpg");
+    /*
     background: linear-gradient(to bottom, rgba(109, 62, 34, 0.98) 0%, rgba(92, 77, 66, 0.247) 100%), url(../assets/img/barbeariaFundo.jpg);
+   */
+   background: linear-gradient(to bottom, rgba(109, 62, 34, 0.98) 0%, rgba(92, 77, 66, 0.247) 100%), url("https://fernandorodrigues29.github.io/siteBarbearia/assets/img/barbeariaFundo.jpg");
+
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
