--- a/estilo00.css
+++ b/estilo00.css
@@ -122,7 +122,7 @@ section{
 }
 /*depoimento*/
 #depoimento-section{
-    background-color: #fff;
+    background-color: rgb(231, 233, 233);
     background: linear-gradient(to bottom, rgba(37, 7, 43, 0.98) 0%, rgba(200, 147, 216, 0.082) 100%), url(./assets/img/room.jpg);
     background-position: center;
     background-repeat: no-repeat;
